--- a/ProyectoED/src/main/java/com/mycompany/proyectoed/frm_Inicio.form
+++ b/ProyectoED/src/main/java/com/mycompany/proyectoed/frm_Inicio.form
@@ -71,10 +71,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="36" style="1"/>
             </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="0" red="0" type="rgb"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Bienvenido"/>
+            <Property name="text" type="java.lang.String" value="Bienvenidos "/>
           </Properties>
         </Component>
       </SubComponents>
